--- a/frontend/src/pages/PublicPage/styles/HeroPage.css
+++ b/frontend/src/pages/PublicPage/styles/HeroPage.css
@@ -11,6 +11,16 @@
     transform: translateY(0);
   }
 }
+
+@keyframes slideLeft {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
 .intro-container {
   display: flex;
   flex-direction: column;
@@ -21,6 +31,7 @@
   overflow: hidden;
   background-color: #f1efe7;
 }
+
 .loading-line-container {
   width: 25%;
   height: 1px;
@@ -28,22 +39,87 @@
   align-items: center;
   overflow: hidden;
 }
+
 .loading-line {
-  width: 0; 
+  width: 100%;
   height: 100%; 
   background-color: #000;
   transition: width 3s ease-in-out;
 }
+
 .intro-container.loading .loading-line {
-  width: 100%;
+  width: 0%;
 }
+
 h1 {
   font-family: 'League Spartan';
   letter-spacing: -2px;
 }
+
 .fade-in {
   animation: fadeInFromTop 2s ease-in-out forwards;
 }
+
 .hidden {
   opacity: 0;
 }
+
+.transition-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #f1efe7;
+  opacity: 0;
+  transition: opacity 2s ease-in-out;
+  pointer-events: none;
+}
+
+.transition-background.visible {
+  opacity: 1;
+}
+
+.delayed {
+  animation-delay: 2s;
+}
+
+.cut-text {
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.intro-container.transitioned h1 span {
+  animation: slideLeft 2s ease-in-out;
+}
+.transition-plane {
+  position: fixed;
+  width: 100%;
+  height: 50%;
+  opacity: 0;
+  transition: opacity 2s ease-in-out, transform 2s ease-in-out;
+  pointer-events: none;
+}
+
+.transition-plane.first-half {
+  top: 0;
+  background-color: #f1efe7; 
+  transform: translateX(-100%);
+}
+
+.transition-plane.second-half {
+  top: 50%; 
+  background-color: #000; 
+  transform: translateX(-100%);
+}
+
+.transition-plane.last.second-half.visible {
+  transition-delay: 0.5s; 
+  transform: translateX(-101%);
+}
+
+.transition-plane.visible {
+  opacity: 1;
+  transform: translateX(0);
+}
+
