--- a/frontend/src/pages/PublicPage/styles/HeroPage.css
+++ b/frontend/src/pages/PublicPage/styles/HeroPage.css
@@ -70,7 +70,7 @@ h1 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #f1efe7;
+  background-color: #ff6a5a;
   opacity: 0;
   transition: opacity 2s ease-in-out;
   pointer-events: none;
@@ -103,7 +103,7 @@ h1 {
 
 .transition-plane.first-half {
   top: 0;
-  background-color: #f1efe7; 
+  background-color: #ff6a5a; 
   transform: translateX(-100%);
 }
 
@@ -115,7 +115,7 @@ h1 {
 
 .transition-plane.last.second-half.visible {
   transition-delay: 0.5s; 
-  transform: translateX(-101%);
+  transform: translateX(-101%); /* Un poco más a la izquierda para el retraso */
 }
 
 .transition-plane.visible {
