--- a/frontend/src/components/Public/styles/Header.css
+++ b/frontend/src/components/Public/styles/Header.css
@@ -1,5 +1,10 @@
 .header-wrapper {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: transparent;
+  z-index: 1000; 
 }
 .h-logo{
   font-size: 70px;
@@ -12,7 +17,6 @@
   border: none;
   color: black;
 }
-
 .menu-overlay {
   position: fixed;
   top: 0;
@@ -22,12 +26,10 @@
   display: none; 
   z-index: 1; 
 }
-
 .menu-open .menu-overlay {
   display: block; 
 
 }
-
 .navbar {
   background: transparent;
   transition: transform 0.3s ease-in-out; 
@@ -36,31 +38,42 @@
   margin-left: 20px;
   margin-right: 20px;
 }
-
 .menu-open-true .navbar {
   transform: translateX(0); /* Mover a la posición normal cuando el menú esté abierto */
 }
-
 .menu-open-false .navbar {
   transform: translateX(-100%); /* Mover fuera de la pantalla cuando el menú esté cerrado */
 }
-
-/* Estilo para centrar y aumentar el tamaño de las letras en el menú */
 .menu-collapse {
   text-align: center;
   background-color: #f5f5f5;
   margin: 1px;
   padding-top: 60px;
 }
-
 .menu-collapse .nav-link {
   font-family: 'League Spartan Light';
   font-size: 15px;
-  padding: 25px; /* Espaciado en las letras */
+  padding: 25px;
   color: #000 !important;
 }
-
 .footer-content{
   margin-top: 30%;
-  padding-bottom: 25px;
+  padding-bottom: 40px;
+}
+.menu-link {
+  color: black;
+  margin: 25px 0;
+  display: block;
+  font-family: 'League Spartan Light';
+  font-size: 18px;
+  padding: 15px; 
+  text-align: center; 
+  text-decoration: none;
+  font-weight: normal;
+  transition: color 0.3s, font-weight 0.3s; 
+}
+.menu-link:hover {
+  color: black; 
+  font-weight: 800;
+  text-decoration: none;
 }
