--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,7 +14,7 @@ body {
   font-family: 'League Spartan';
   margin: 0;
   padding: 0;
-  background-color: #ff6a5a;
+  background-color: #f1efe7;
 }
 
 :root {
