--- a/frontend/src/pages/PublicPage/styles/HeroPage.css
+++ b/frontend/src/pages/PublicPage/styles/HeroPage.css
@@ -70,9 +70,8 @@ h1 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #ff6a5a;
   opacity: 0;
-  transition: opacity 2s ease-in-out;
+  transition: opacity 0.5s ease-in-out; /* Misma duración que la redirección */
   pointer-events: none;
 }
 
@@ -92,35 +91,3 @@ h1 {
 .intro-container.transitioned h1 span {
   animation: slideLeft 2s ease-in-out;
 }
-.transition-plane {
-  position: fixed;
-  width: 100%;
-  height: 50%;
-  opacity: 0;
-  transition: opacity 2s ease-in-out, transform 2s ease-in-out;
-  pointer-events: none;
-}
-
-.transition-plane.first-half {
-  top: 0;
-  background-color: #ff6a5a; 
-  transform: translateX(-100%);
-}
-
-.transition-plane.second-half {
-  top: 50%; 
-  background-color: #83b8aa; 
-  transform: translateX(-100%);
-}
-
-.transition-plane.last.second-half.visible {
-  transition-delay: 0.5s; 
-  transform: translateX(-101%); /* Un poco más a la izquierda para el retraso */
-}
-
-.transition-plane.visible {
-  opacity: 1;
-  transform: translateX(0);
-}
-
-
