--- a/frontend/src/pages/PublicPage/styles/HomePage.css
+++ b/frontend/src/pages/PublicPage/styles/HomePage.css
@@ -1,18 +1,17 @@
 .home-page {
   position: fixed;
   top: 0;
-  left: -100%; /* Inicialmente, la página estará fuera de la vista a la izquierda */
+  left: -10%; 
   width: 100%;
   height: 100%;
-  background-color: #ff6a5a; /* Color de fondo inicial */
+  background-color: #ff6a5a;
   opacity: 0;
- transition: left 2s ease-in-out, opacity 2s ease-in-out, background-color 2s ease-in-out;
+  transition: left 1s ease-in-out, opacity 1s ease-in-out, background-color 0.5s ease-in-out;
   z-index: 0;
 }
 
 .home-page.active {
-  left: 0; /* Desplaza la página a la posición visible */
+  left: 0; 
   opacity: 2;
-  transition-delay: .1s; /* Retrasa la aparición para permitir la transición suave */
-  background-color: #f1efe7; /* Cambia el color de fondo según lo que necesites */
+  transition-delay: none; 
 }
